--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
+    "server": "node server",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "vue": "^2.6.12",
     "vue-router": "^3.0.1"
   },
