--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "avt",
   "version": "1.0.0",
+  "private": true,
   "description": "A Vue.js project",
   "author": "",
-  "private": true,
   "scripts": {
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src test/unit",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "unit": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
+    "@vue/cli": "^4.5.9",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.19.0",
+    "lodash": "^4.17.20",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
     "vue": "^2.6.12",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-slicksort": "^1.1.3",
+    "vue-wave-surfer": "^1.0.1",
+    "vuedraggable": "^2.24.3",
+    "vuetify": "^2.3.18",
+    "wavesurfer.js": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -54,26 +66,31 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-feather-icons": "^5.1.0",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuetify-loader": "^1.3.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  }
 }
