--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.12",
+    "vue-drag-n-drop": "^1.2.1",
     "vue-router": "^3.0.1",
     "vue-slicksort": "^1.1.3",
+    "vue-slider-component": "^3.2.11",
+    "vue-virtual-scroll-list": "^2.3.1",
     "vue-wave-surfer": "^1.0.1",
+    "vue2-dropzone": "^3.6.0",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.3.18",
     "wavesurfer.js": "^4.2.0"
