--- a/package.json
+++ b/package.json
@@ -6,27 +6,28 @@
   "author": "",
   "scripts": {
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src test/unit",
+    "lint": "eslint --ext .js,.vue src test/unit --fix",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "test": "npm run unit",
-    "unit": "jest --config test/unit/jest.conf.js --coverage"
-    "lint": "eslint --ext .js,.vue src test/unit --fix",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "server": "node server",
     "prod": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
     "@mdi/font": "^5.8.55",
     "@vue/cli": "^4.5.9",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "v-file-upload": "^3.1.7",
     "vue": "^2.6.12",
+    "vue-audio-visual": "^2.2.1",
     "vue-drag-n-drop": "^1.2.1",
     "vue-router": "^3.0.1",
     "vue-slicksort": "^1.1.3",
