--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "node-id3": "^0.2.2",
     "vue": "^2.6.12",
     "vue-router": "^3.0.1"
   },
