--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit --fix",
     "server": "node server",
+    "both": "concurrently 'npm run server' 'npm start'",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.5",
     "css-loader": "^0.28.0",
