--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "server": "node server",
-    "both": "concurrently 'npm run server' 'npm start'",
-    "build": "node build/build.js"
+    "both": "concurrently 'npm run server' 'npm start'"
   },
   "dependencies": {
     "@mdi/font": "^5.8.55",
@@ -116,9 +114,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  }
+  ]
 }
