--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "express": "^4.17.1",
-    "node-id3": "^0.2.2",
     "lodash": "^4.17.20",
+    "node-id3": "^0.2.2",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "v-file-upload": "^3.1.7",
@@ -31,6 +31,7 @@
     "vue-audio-visual": "^2.2.1",
     "vue-drag-n-drop": "^1.2.1",
     "vue-router": "^3.0.1",
+    "vue-simple-uploader": "0.7.6",
     "vue-slicksort": "^1.1.3",
     "vue-slider-component": "^3.2.11",
     "vue-virtual-scroll-list": "^2.3.1",
