--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdi/font": "^5.8.55",
     "@vue/cli": "^4.5.9",
     "axios": "0.21.1",
+    "bitcrusher": "^0.3.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
