--- a/package.json
+++ b/package.json
@@ -15,32 +15,20 @@
     "both": "concurrently 'npm run server' 'npm start'"
   },
   "dependencies": {
-    "@mdi/font": "^5.8.55",
-    "@vue/cli": "^4.5.9",
     "axios": "0.21.1",
     "bitcrusher": "^0.3.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.20",
     "node-id3": "^0.2.2",
-    "popper.js": "^1.16.1",
-    "portal-vue": "^2.1.7",
-    "v-file-upload": "^3.1.7",
     "vue": "^2.6.12",
     "vue-audio-visual": "^2.2.1",
-    "vue-drag-n-drop": "^1.2.1",
-    "vue-router": "^3.0.1",
-    "vue-simple-uploader": "0.7.6",
-    "vue-slicksort": "^1.1.3",
     "vue-slider-component": "^3.2.11",
     "vue-virtual-scroll-list": "^2.3.1",
     "vue-wave-surfer": "^1.0.1",
     "vue2-dropzone": "^3.6.0",
-    "vuedraggable": "^2.24.3",
-    "vuetify": "^2.3.18",
-    "wavesurfer.js": "^4.2.0"
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -92,6 +80,7 @@
     "vue-feather-icons": "^5.1.0",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
+    "vue-router": "^3.4.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuetify-loader": "^1.3.0",
